products fetch api

--- a/1. JavaScript/29.FetchAPI.html
+++ b/1. JavaScript/29.FetchAPI.html
@@ -58,6 +58,17 @@
         console.log(posts);
 
         
+fetch('https://dummyjson.com/products')
+.then(res => res.json())
+.then(console.log)
+
+for(let i = 1; i <= 100; i++){
+            fetch(`https://dummyjson.com/products/${i}`)
+        .then(res => res.json())
+        .then(console.log);
+        }
+
+        
 
     </script>
 </body>
