--- a/1. JavaScript/29.FetchAPI.html
+++ b/1. JavaScript/29.FetchAPI.html
@@ -62,10 +62,18 @@ fetch('https://dummyjson.com/products')
 .then(res => res.json())
 .then(console.log)
 
+let output = [];
+
 for(let i = 1; i <= 100; i++){
             fetch(`https://dummyjson.com/products/${i}`)
         .then(res => res.json())
-        .then(console.log);
+        .then(data => {
+            output.push(data);
+
+            if(i == 100){
+                console.log(JSON.stringify(output));
+            }
+        });
         }
 
         
